--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script defer src="javascript.js"></script>
     <title>Sign-Up Form</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
 
         <div class="info-wrap">
             <h1 class="info-title"><em>Bestest</em> service on the planet!</h1>
-            <p class="info-para">Want to become part of something amazing? Here is your chance at signing up for the world <em>most</em> awesome service.
+            <p class="info-para">Want to become part of something amazing? Here is your chance at signing up for the world's <em>most</em> awesome service.
             </p>
             <p class="info-para">
             You <em>know</em> you want to.
@@ -27,43 +28,46 @@
 
         <div class="login-wrap">
             <h2 class="login-title">Let's do this!</h2>
-            <form class="form" action="" method="">
+            <form class="form" action="#" method="post">
 
                 <div class="left-section">
                     <p>
                         <label class="label" for="first-name">First Name</label>
-                        <input class="input" type="text" id="first-name" name="first-name" placeholder="Jack">
+                        <input class="input" type="text" id="first-name" name="first-name" minlength="1" maxlength="16" placeholder="Jack" required>
                     </p>
                     <p>
                         <label class="label" for="email">Email</label>
-                        <input class="input" type="email" id="email" name="email" placeholder="pirate@blackpearl.sea">
+                        <input class="input" type="email" id="email" name="email" placeholder="pirate@blackpearl.sea" required>
                     </p>
                     <p>
                         <label class="label" for="password">Password</label>
-                        <input class="input" type="password" id="password" name="password">
+                        <input class="input" type="password" id="password" name="password" minlength="6" maxlength="16" pattern="[a-zA-Z0-9_\-=+*&^%$£!#@\.?]" placeholder="password" required>
                     </p>
                 </div>
 
                 <div class="right-section">
                     <p>
                         <label class="label" for="last-name">Last Name</label>
-                        <input class="input" type="text" id="last-name" name="last-name" placeholder="Sparrow">
+                        <input class="input" type="text" id="last-name" name="last-name" minlength="1" maxlength="20" placeholder="Sparrow">
                     </p>
                     <p>
                         <label class="label" for="phone">Phone Number</label>
-                        <input class="input" type="tel" id="phone" name="phone">
+                        <input class="input" type="tel" id="phone" name="phone" placeholder="12345 123123">
                     </p>
                     <p>
                         <label class="label" for="confirm-password">Confirm Password</label>
-                        <input class="input" type="password" id="confirm-password" name="confirm-password">
+                        <input class="input" type="password" id="confirm-password" name="confirm-password" placeholder="password" required>
                     </p>
+                    
+                    <input type="submit" id="submit-form" class="hidden">
+
                 </div>
 
             </form>
         </div>
 
         <div class="submit-wrap">
-            <button class="submit-button">Create Account</button>
+            <label class="submit-button" for="submit-form" tabindex="=0">Create Account</label>
             <p class="account">Already have and account?<span class="account-link">Log in</span></p>
         </div>
 
